--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,7 @@
 version: '3.8'
 
+name: flutter_docker
+
 services:
   flutter:
     build:
@@ -9,6 +11,7 @@ services:
     working_dir: /app
     volumes:
       - .:/app
+      - ~/.android:/root/.android:ro
     environment:
       - DISPLAY=${DISPLAY}
     network_mode: host
